--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio---react",
   "version": "0.1.0",
   "private": true,
+   "engines": {
+    "node": "20.10.0"
+  },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
